--- a/k8s/mongonaut/templates/deployment.yaml
+++ b/k8s/mongonaut/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
       containers:
-        - image: jaegertracing/jaeger-agent
+        - image: jaegertracing/jaeger-agent:1.16
           name: {{ .Chart.Name }}-jaeger-agent
           ports:
           - containerPort: 5775
